--- a/postgres-matrix.yml
+++ b/postgres-matrix.yml
@@ -5,4 +5,6 @@ version_matrix:
   - 2.16:
       postgres_versions: [ 10, 11, 12, 13, 14 ]
   - 2.17:
-      postgres_versions: [ 10, 11, 12, 13, 14, 15 ]
+      postgres_versions: [ 10, 11, 12, 13, 14, 15, 16 ]
+  - 2.18:
+      postgres_versions: [ 11, 12, 13, 14, 15, 16 ]
