--- a/postgres-matrix.yml
+++ b/postgres-matrix.yml
@@ -6,3 +6,5 @@ version_matrix:
       postgres_versions: [ 10, 11, 12, 13, 14 ]
   - 2.5.0:
       postgres_versions: [ 10, 11, 12, 13, 14, 15 ]
+  - 2.6.0:
+      postgres_versions: [ 11, 12, 13, 14, 15, 16 ]
