--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -9,8 +9,7 @@ env:
   PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
   PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
   MSRUSTUP_PAT: ${{ secrets.MSRUSTUP_PAT }}
-  MSCODEHUB_USERNAME: ${{ secrets.MSCODEHUB_USERNAME }}
-  MSCODEHUB_PASSWORD: ${{ secrets.MSCODEHUB_PASSWORD }}
+  CRATES_IO_MIRROR_FEED_TOKEN: ${{ secrets.CRATES_IO_MIRROR_FEED_TOKEN }}
 on:
   push:
     branches:
