--- a/.github/workflows/build-package-test.yml
+++ b/.github/workflows/build-package-test.yml
@@ -40,40 +40,40 @@ jobs:
       fail-fast: false
       matrix:
         TARGET_PLATFORM:
-        #   - centos-7
-        #   - oraclelinux-8
+          - centos-7
+          - oraclelinux-8
           - oraclelinux-7
-        #   - almalinux-8
-        #   - almalinux-9
+          - almalinux-8
+          - almalinux-9
         POSTGRES_VERSION:
-          # - pg11
-        #   - pg12
-        #   - pg13
-        #   - pg14
+          - pg11
+          - pg12
+          - pg13
+          - pg14
           - pg15
-        #   - pg16
-        # exclude:
-        #   - TARGET_PLATFORM: centos-7
-        #     POSTGRES_VERSION: pg16
-        #   - TARGET_PLATFORM: oraclelinux-7
-        #     POSTGRES_VERSION: pg16
-        # include:
-          # - TARGET_PLATFORM: debian-buster
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: debian-bullseye
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: debian-bookworm
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: ubuntu-bionic
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: ubuntu-focal
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: ubuntu-jammy
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: ubuntu-kinetic
-          #   POSTGRES_VERSION: all
-          # - TARGET_PLATFORM: pgxn
-          #   POSTGRES_VERSION: all
+          - pg16
+        exclude:
+          - TARGET_PLATFORM: centos-7
+            POSTGRES_VERSION: pg16
+          - TARGET_PLATFORM: oraclelinux-7
+            POSTGRES_VERSION: pg16
+        include:
+          - TARGET_PLATFORM: debian-buster
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: debian-bullseye
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: debian-bookworm
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: ubuntu-bionic
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: ubuntu-focal
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: ubuntu-jammy
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: ubuntu-kinetic
+            POSTGRES_VERSION: all
+          - TARGET_PLATFORM: pgxn
+            POSTGRES_VERSION: all
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -92,8 +92,8 @@ jobs:
           pull: true
           push: true
           tags: ghcr.io/citusdata/packaging-test:${{ matrix.TARGET_PLATFORM }}-${{ matrix.POSTGRES_VERSION }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # cache-from: type=gha
+          # cache-to: type=gha,mode=max
 
       # - name: Clone tools repo for test
       #   run: git clone -b v0.8.27 --depth=1  https://github.com/citusdata/tools.git tools
